Small UI updates

--- a/src/main/resources/view/FoodListCard.fxml
+++ b/src/main/resources/view/FoodListCard.fxml
@@ -32,6 +32,7 @@
             </HBox>
 
             <Label fx:id="stallName" styleClass="cell_small_label" text="\$stallName" />
+            <Label fx:id="price" styleClass="cell_small_label" text="\$price" />
             <HBox>
                 <children>
                     <Label text="Description: " />
